feat(project): 实现项目序列化和反序列化功能
- 添加了 ProjectSnapshot 类用于定义项目存档的数据结构
- 实现了完整的项目序列化和反序列化逻辑，支持图层、画布和形状数据
- 添加了 ShapeSerialization 工具类处理各种图形类型的序列化
- 在 AppState 中添加了 setCurrentProject 方法
- 重构 CanvasModel 构造函数以支持自定义 ID 和可选默认图层
- 更新 PathUtils 使用新的集合 API 方法 get